somewhat working sudoku with logical errors

--- a/Lab3/Makefile
+++ b/Lab3/Makefile
@@ -1,3 +1,3 @@
 hello: sudoku.c
-	clang -std=c99 -Wall -Wextra -g -o sudoku sudoku.c
+	clang -std=c99 -Wall -Wextra -g -pthread -o sudoku sudoku.c
 	@echo "  clean:  removes .o and binary files"
